@@ -519,10 +519,10 @@ update_rate_limiter_timeout (GFileMonitor *monitor,
  * implementations only.
  **/
 void
-g_file_monitor_emit_event (GFileMonitor *monitor,
-			   GFile *child,
-			   GFile *other_file,
-			   GFileMonitorEvent event_type)
+g_file_monitor_emit_event (GFileMonitor      *monitor,
+			   GFile             *child,
+			   GFile             *other_file,
+			   GFileMonitorEvent  event_type)
 {
   guint32 time_now, since_last;
   gboolean emit_now;
