@@ -1,3 +1,12 @@
+2008-01-20  Matthias Clasen  <mclasen@redhat.com>
+
+	* gfile.c:
+	* gfilemonitor.[hc]:
+	* gmemoryinputstream.c:
+	* gmemoryoutputstream.c:
+	* gmountoperation.c:
+	* gthemedicon.c: Documentation updates
+
 2008-01-20  Murray Cumming  <murrayc@murrayc.com>
 
 	* gfile.c: documentation: Fixed more minor 
