@@ -1,3 +1,7 @@
+2008-01-20  Matthias Clasen  <mclasen@redhat.com>
+
+	* gio/gio-sections.txt: Additions
+
 2008-01-14  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.15.2 ===
